feat: styling cards - add same height

--- a/#src/index.html
+++ b/#src/index.html
@@ -13,7 +13,7 @@
     </main>
   </div>
 <!--  @@include('components/footer/footer.html', {})-->
-  <script src="js/libs.min.js"></script>
-  <script src="js/app.min.js"></script>
+<!--  <script src="js/libs.min.js"></script>-->
+<!--  <script defer src="js/app.min.js"></script>-->
 </body>
 </html>
